fixed minor issues #v1.0.0 - 14.5.2021

--- a/views/includes/_ans_submit_form.ejs
+++ b/views/includes/_ans_submit_form.ejs
@@ -116,7 +116,7 @@
                     name="question_7">
                 <label for="radio-btn-62" class="btn">Every one do that.</label>
 
-                <input type="radio" required value='I' m not in everyone.' id="radio-btn-63" class='next'
+                <input type="radio" required value="I' m not in everyone." id="radio-btn-63" class='next'
                     name="question_7">
                 <label for="radio-btn-63" class="btn">I'm not in everyone.</label>
 
@@ -167,6 +167,7 @@
             </fieldset>
 
             <fieldset class='options'>
+                <a href="/" style="text-decoration: none;" class='get-started-now text'>Make your own.!</a> <br><br>
                 <heading class='get-started-now text'>Thanks for participating.!</heading>
             </fieldset>
             <% } %>
