--- a/views/user-response.ejs
+++ b/views/user-response.ejs
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Friendy</title>
+    <meta name="description" content="Friends, Friendy, Friends Quiz, Friends meter, Friend meter quiz">
+    <meta name="author" content="Tanishq Singh">
+    <meta name="copyright" content="MIT-C-2021">
+    <meta name="robots" content="index, follow">
+    <meta name="rating" content="safe for kids">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/user-response.css">
-    <title> Friendy </title>
+    <script data-ad-client="ca-pub-4213266165269725" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
